--- a/app/views/food_items/new.html.erb
+++ b/app/views/food_items/new.html.erb
@@ -17,7 +17,7 @@
                 <%= form_for @food_item do |f| %>
                   <div class="form-group">
                     <%= f.label :category_id, class: 'mb-2' %>
-                    <%= f.collection_select :category_id , Category.order(:menu), :id, :title, {:prompt => 'Choose a category'}, class: "form-control form-control-lg" %>
+                    <%= f.collection_select :category_id , Category.all.map{|a| ["#{a.menu_id} - #{a.title}", a.id]}, :second, :first, {:prompt => 'Choose a category'},class:"form-control form-control-lg" %>
                   </div>
                   <div class="form-group">
                     <%= f.label :name, class: 'mb-2' %>
